# CV-Tailor

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  manage.py  pyproject.toml
backend/accounts/: adapters.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_integration.py  test_google_oauth.py  test_models.py  test_profile_api.py
backend/artifacts/: apps.py  editing_views.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
backend/artifacts/migrations/: 0001_initial.py  0002_rename_evidence_link_and_add_unified_fields.py  0003_rename_table_to_evidence.py  0004_rename_link_type_to_evidence_type.py  0005_alter_evidence_options_alter_evidence_artifact_and_more.py  0006_simplify_evidence_types.py  0007_add_user_context_field.py  0008_remove_artifact_unified_embedding.py  0009_add_artifact_status_tracking.py  0010_mark_existing_artifacts_complete.py  0011_add_reunifying_status.py  0012_update_wizard_step_max_to_8.py  0013_add_job_type_to_processing_job.py  0014_add_review_finalized_status.py  0015_update_wizard_step_max_to_6.py  0016_alter_artifact_status.py
backend/artifacts/tests/: __init__.py  conftest.py  test_api.py  test_editing.py  test_enrichment.py  test_enrichment_serializers.py  test_evidence_review_api.py  test_models.py
backend/common/: exceptions.py  test_base.py  test_mocks.py  test_utils.py
backend/cv_tailor/: asgi.py  celery.py  middleware.py  settings.py.old  urls.py  wsgi.py
backend/cv_tailor/settings/: __init__.py  base.py  development.py  production.py  test.py
backend/cv_tailor/tests/: __init__.py  test_settings.py  test_storage.py
backend/export/: apps.py  document_generators.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/export/migrations/: 0001_initial.py
backend/export/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_tasks.py
backend/generation/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/generation/migrations/: 0001_initial.py  0002_bulletgenerationjob_bulletpoint_and_more.py  0003_alter_bulletpoint_cv_generation.py  0004_bulletpoint_approved_at_bulletpoint_approved_by_and_more.py  0005_add_individual_bullet_approval.py  0006_generateddocument_last_activity_at_and_more.py  0007_remove_generateddocument_last_activity_at_and_more.py
backend/generation/services/: __init__.py  bullet_generation_service.py  bullet_validation_service.py  bullet_verification_service.py  confidence_calculator.py  generation_service.py  generation_status_service.py
backend/generation/tests/: __init__.py  conftest.py  test_api.py  test_bullet_enhancements.py  test_confidence_thresholds.py  test_cv_generation_with_artifacts.py  test_cv_update_api.py  test_generation_status.py  test_models.py  test_services.py  test_tasks.py  test_verification_service.py
backend/generation/validators/: __init__.py
backend/llm_services/: __init__.py  admin.py  apps.py  models.py  pytest.ini  serializers.py  urls.py  views.py
backend/llm_services/migrations/: 0001_initial.py  0002_rename_artifact_chunk_artifact_idx_artifact_ch_artifac_db15f8_idx_and_more.py  0003_alter_artifactchunk_options_and_more.py  0004_remove_enhancedartifact_original_artifact_id_and_more.py  0005_artifact_preprocessing.py  0006_rename_enhanced_artifact_to_enhanced_evidence.py  0007_rename_table_enhanced_artifacts_to_enhanced_evidence.py  0008_alter_artifactchunk_options_and_more.py  0009_drop_orphaned_tables.py  (+9 more)
backend/scripts/: profile_tests.sh
(+369 files in other folders)
